Switched assignment 4 to use bootstrap instead of Angular material

--- a/assignment4/src/styles.css
+++ b/assignment4/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+body { 
+    padding: 20px; 
+}
+
+span.glyphicon {
+    font-size: 3em;
+}
