Added Bootstrap panel for each zippy element and a glyphicon for the up and down arrows that toggles when clicked

--- a/assignment5/src/app/zippy.component.css
+++ b/assignment5/src/app/zippy.component.css
@@ -1,3 +1,10 @@
 .glyphicon {
-    font-size: 2em;
+    font-size: 1.5em;
+}
+
+.panel-default {
+    max-width: 500px;
+    height: 80px;
+    padding: 10px;
+    margin-left: 20px;
 }
