--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -1,11 +1,11 @@
 <form>
   <div class="form-group">
     <label for="firstName">First Name</label>
-    <input id="firstName" class="form-control" type="text">
+    <input ngModel name="firstName" id="firstName" #firstName="ngModel" (change)="log(firstName)" class="form-control" type="text">
   </div>
   <div class="form-group">
     <label for="comment">Comment</label>
-    <textarea class="form-control" id="comment" cols="30" row="10"></textarea>
+    <textarea ngModel name="comment" class="form-control" id="comment" cols="30" rows="10"></textarea>
   </div>
   <button class="btn btn-primary">Submit</button>
 </form>
