--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -1,7 +1,8 @@
 <form>
   <div class="form-group">
     <label for="firstName">First Name</label>
-    <input ngModel name="firstName" id="firstName" #firstName="ngModel" (change)="log(firstName)" class="form-control" type="text">
+    <input required ngModel name="firstName" id="firstName" #firstName="ngModel" (change)="log(firstName)" class="form-control" type="text">
+    <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">First Name is required.</div>
   </div>
   <div class="form-group">
     <label for="comment">Comment</label>
