--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -36,5 +36,5 @@
     <label for="comment">Comment</label>
     <textarea ngModel name="comment" class="form-control" id="comment" cols="30" rows="10"></textarea>
   </div>
-  <button class="btn btn-primary">Submit</button>
+  <button class="btn btn-primary" [disabled]="!f.valid">Submit</button>
 </form>
