--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -36,5 +36,13 @@
     <label for="comment">Comment</label>
     <textarea ngModel name="comment" class="form-control" id="comment" cols="30" rows="10"></textarea>
   </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" ngModel name="isSubscribed"> Subscribe to mailing list
+    </label>
+  </div>
+  <p>
+    {{ f.value | json }}
+  </p>
   <button class="btn btn-primary" [disabled]="!f.valid">Submit</button>
 </form>
