--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -41,6 +41,13 @@
       <input type="checkbox" ngModel name="isSubscribed"> Subscribe to mailing list
     </label>
   </div>
+  <div class="form-group">
+    <label for="contactMethod"></label>
+    <select multiple ngModel name="contactMethod" id="contactMethod" class="form-control">
+      <option value=""></option>
+      <option *ngFor="let method of contactMethods" [value]="method.id">{{ method.name }}</option>
+    </select>
+  </div>
   <p>
     {{ f.value | json }}
   </p>
