--- a/hello-world/src/app/contact-form/contact-form.component.html
+++ b/hello-world/src/app/contact-form/contact-form.component.html
@@ -48,6 +48,12 @@
       <option *ngFor="let method of contactMethods" [value]="method.id">{{ method.name }}</option>
     </select>
   </div>
+  <div *ngFor="let method of contactMethods" class="radio">
+    <label>
+      <input ngModel type="radio" name="contactMethod" [value]="method.id">
+      {{ method.name }}
+    </label>
+  </div>
   <p>
     {{ f.value | json }}
   </p>
