--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -6,8 +6,9 @@
             id="username" 
             type="text" 
             class="form-control">
-        <div *ngIf="username.touched && usename.invalid" class="alert alert-danger">
-            Username is required.
+        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+            <div *ngIf="username.errors.required">Username is required.</div>
+            <div *ngIf="username.errors.minlength">Username should be minimum {{ username.errors.minlength.requiredLength }} characters.</div>
         </div>
     </div>
     <div class="form-group">
