--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -1,4 +1,7 @@
-<form [formGroup]="form">
+<form [formGroup]="form" (ngSubmit)="login()">
+    <div *ngIf="form.errors" class="alert alert-danger">
+        The username or password is invalid.
+    </div>
     <div class="form-group">
         <label for="username">Username</label>
         <input 
@@ -6,6 +9,7 @@
             id="username" 
             type="text" 
             class="form-control">
+        <div *ngIf="username.pending">Checking for uniqueness...</div>
         <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
             <div *ngIf="username.errors.required">Username is required.</div>
             <div *ngIf="username.errors.minlength">Username should be minimum {{ username.errors.minlength.requiredLength }} characters.</div>
