--- a/hello-world/src/app/signup-form/signup-form.component.html
+++ b/hello-world/src/app/signup-form/signup-form.component.html
@@ -1,29 +1,31 @@
 <form [formGroup]="form" (ngSubmit)="login()">
-    <div *ngIf="form.errors" class="alert alert-danger">
-        The username or password is invalid.
-    </div>
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input 
-            formControlName="username"
-            id="username" 
-            type="text" 
-            class="form-control">
-        <div *ngIf="username.pending">Checking for uniqueness...</div>
-        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
-            <div *ngIf="username.errors.required">Username is required.</div>
-            <div *ngIf="username.errors.minlength">Username should be minimum {{ username.errors.minlength.requiredLength }} characters.</div>
-            <div *ngIf="username.errors.cannotContainSpace">Username should not contain a space.</div>
-            <div *ngIf="username.errors.shouldBeUnique">Username is already taken.</div>
+    <div formGroupName="account">
+        <div *ngIf="form.errors" class="alert alert-danger">
+            The username or password is invalid.
         </div>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input 
-            formControlName="password"
-            id="password" 
-            type="text" 
-            class="form-control">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input 
+                formControlName="username"
+                id="username" 
+                type="text" 
+                class="form-control">
+            <div *ngIf="username.pending">Checking for uniqueness...</div>
+            <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+                <div *ngIf="username.errors.required">Username is required.</div>
+                <div *ngIf="username.errors.minlength">Username should be minimum {{ username.errors.minlength.requiredLength }} characters.</div>
+                <div *ngIf="username.errors.cannotContainSpace">Username should not contain a space.</div>
+                <div *ngIf="username.errors.shouldBeUnique">Username is already taken.</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input 
+                formControlName="password"
+                id="password" 
+                type="text" 
+                class="form-control">
+        </div>
     </div>
     <button class="btn btn-primary" type="submit">Sign Up</button>
 </form>
