--- a/section9/src/app/posts.component.html
+++ b/section9/src/app/posts.component.html
@@ -7,6 +7,9 @@
    <li 
     *ngFor="let post of posts" 
     class="list-group-item">
+    <button 
+      (click)="updatePost(post)"
+      class="btn btn-default btn-sm">Update</button>
     {{ post.title }}
    </li>
 </ul>
