--- a/section9/src/app/posts.component.html
+++ b/section9/src/app/posts.component.html
@@ -8,8 +8,8 @@
     *ngFor="let post of posts" 
     class="list-group-item">
     <button 
-      (click)="updatePost(post)"
-      class="btn btn-default btn-sm">Update</button>
+      (click)="deletePost(post)"
+      class="btn btn-default btn-sm">Delete</button>
     {{ post.title }}
    </li>
 </ul>
