--- a/section10/src/app/navbar/navbar.component.html
+++ b/section10/src/app/navbar/navbar.component.html
@@ -2,8 +2,13 @@
   <div class="container-fluid">
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active current"><a routerLink="/followers">Followers</a></li>
-        <li routerLinkActive="active current"><a routerLink="/posts">Posts</a></li>
+        <li routerLinkActive="active current">
+          <a routerLink="/followers" 
+             [queryParams]="{ page: 1, order: 'newest' }">Followers</a>
+        </li>
+        <li routerLinkActive="active current">
+          <a routerLink="/posts">Posts</a>
+        </li>
       </ul>
     </div>
   </div>
