--- a/assignment9/src/app/archive.component.html
+++ b/assignment9/src/app/archive.component.html
@@ -1,3 +1,3 @@
 <h1>Archive for {{ year }} / {{ month }}</h1>
 
-<button (click)="viewAll()" type="button">View All</button>
+<button (click)="viewAll()">View All</button>
